--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blagues Carambar</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <h1>Blagues Carambar</h1>
-    <div id="loading" class="loading">Chargement...</div>
     <div id="joke" class="joke">Cliquez sur un bouton pour une blague</div>
     <button onclick="getJoke()">Nouvelle Devinette</button>
     <button onclick="showAnswer()">Voir la Réponse</button>
